fix header margins on mobile

--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -148,6 +148,19 @@
     }
     .header {
         font-size: 35px;
+        margin-bottom: 0;
+    }
+    .technologies-section {
+        .header {
+            margin-bottom: 60px;
+        }
+    }
+    .references-section {
+        .references-inner {
+            .header {
+                margin-bottom: 60px;
+            }
+        }
     }
     .main-section {
         .main-cta {
