--- a/scss/style.scss
+++ b/scss/style.scss
@@ -163,7 +163,7 @@
     }
     .scroll-arrows {
         position: absolute;
-        left: calc(50% - 10px);
+        left: calc(50% - 15px);
         bottom: 40px;
         width: 30px;
         visibility: hidden;
